# deepxube

./: .gitattributes  .gitignore  CHANGES.md  ENVIRONMENT.md  HEURSEARCH.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  README.md  TRAIN.md  make_gridtut_prob_insts.py  mypy.ini  pixi.toml  pyproject.toml  setup.cfg  setup.py  shell.nix  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  publish.yml  publish_to_pypi.yml  test.yml
deepxube/: __init__.py  __main__.py  _cli.py  _solve.py  _train_cli.py  cli.py  train_cli.py
deepxube/base/: domain.py  env.py  environment.py  factory.py  heuristic.py  nnet.py  nnet_fn.py  nnet_input.py  nnet_par_fn.py  pathfind_fns.py  (+4 more)
docs/: .buildinfo  CNAME  api.html  deepxube.html  genindex.html  index.html  index.md  objects.inv  py-modindex.html  references.bib  references.html  search.html  search.js  searchindex.js
docs_gen/: build_script.sh  conf.py  references.bib  write_root_index.py
docs_tutorial/: background.md  conf.py  example.md  installation.md
domains/: grid_tutorial.py
examples/: davi_bwas.sh  run_bwas.py  run_davi.py  run_test.py  run_test_env.py  run_train_heur.py  train_cube3.py  train_heur.py
heuristics/: resnet_fc_tut.py
misc/: env_select.py
nnets/: resnet_fc_tut.py
scripts/: search.py  spec_goal.py  train.py  train_new.py
tests/: run_test_env.py  test_astar.py  test_avi.py  test_bk.py  test_bruteforce.py  test_compat.py  test_continuous_action_pathfinding.py  test_defaults.py  test_domains.py  test_env.py  test_environment.py  test_parse_clauses.py  test_train_solve.py
(+1162 files in other folders)
